--- a/product_list/list.htm
+++ b/product_list/list.htm
@@ -45,8 +45,8 @@
 		</div>
 	</nav>
 
-	<div class="container">
-		<img class="img-responsive tutorial" href="#" src="img/tutorial2.png">
+	<div class="container" style="text-align: center; margin: 0 auto;float: none;">
+		<img class="img-responsive tutorial" href="#" src="img/tutorial2.png" width="70%" height="70%" style="text-align: center; margin: 0 auto;float: none;">
 		</br>
 	</div>
 
