--- a/product_list/list.htm
+++ b/product_list/list.htm
@@ -58,17 +58,17 @@
 					<div class="col-sm-3">
 						<div class="panel panel-default productPanel">
 							<div class="panel-heading text-center">
-								<img class="img-responsive productImage" href="#" src="img/k1.jpeg">
+								<img class="img-responsive productImage" href="#" src="img/nike2.png">
 							</div>
 							<div class="panel-body">
-								<div class="productName">Apple iPad Pro 9.7</div>
+								<div class="productName">รองเท้า nike</div>
 								<div class="productLocation">อ.เมืองเชียงใหม่ จ.เชียงใหม่</div>
 								<div>
 									<span>
 										<img class="img-responsive ratingImg" src="img/r2.png">
 										<div class="my-popover-content">Verification Lv.2</div>
 									</span>
-									<span class="productPrice">฿23,900.00</span>
+									<span class="productPrice">฿390.00</span>
 								</div>
 							</div>
 							<div class="my-popover-content">
@@ -82,15 +82,15 @@
 					<div class="col-sm-3">
 						<div class="panel panel-default productPanel">
 							<div class="panel-heading text-center">
-								<img class="img-responsive productImage" href="#" src="img/k2.png">
+								<img class="img-responsive productImage" href="#" src="img/nike3.png">
 							</div>
 							<div class="panel-body">
-								<div class="productName">คริสตัน ดราก้อน 25 เล่ม</div>
+								<div class="productName">Nike basketball shoe for boys.</div>
 								<div class="productLocation">อ.เมืองนครราชสีมา จ.นครราชสีมา</div>
 								<div><span>
 									<img class="img-responsive ratingImg" src="img/r1.png">
 									<div class="my-popover-content">Verification Lv.1</div>
-								</span><span class="productPrice">฿750.00</span>
+								</span><span class="productPrice">฿2,500.00</span>
 								</div>
 							</div>
 							<div class="my-popover-content">
