--- a/product_list/list.htm
+++ b/product_list/list.htm
@@ -54,7 +54,7 @@
 		<div class="container">
 			<div class="row">
 
-				<a href="./kaidee1.htm">
+				<a href="#">
 					<div class="col-sm-3">
 						<div class="panel panel-default productPanel">
 							<div class="panel-heading text-center">
@@ -78,7 +78,7 @@
 					</div>
 				</a>
 
-				<a href="./kaidee2.htm">
+				<a href="#">
 					<div class="col-sm-3">
 						<div class="panel panel-default productPanel">
 							<div class="panel-heading text-center">
