--- a/product_list/list.htm
+++ b/product_list/list.htm
@@ -68,7 +68,7 @@
 										<img class="img-responsive ratingImg" src="img/r2.png">
 										<div class="my-popover-content">Verification Lv.2</div>
 									</span>
-									<span class="productPrice">฿390.00</span>
+									<span class="ad-price">฿390.00</span>
 								</div>
 							</div>
 							<div class="my-popover-content">
@@ -90,7 +90,7 @@
 								<div><span>
 									<img class="img-responsive ratingImg" src="img/r1.png">
 									<div class="my-popover-content">Verification Lv.1</div>
-								</span><span class="productPrice">฿2,500.00</span>
+								</span><span class="ad-price">฿2,500.00</span>
 								</div>
 							</div>
 							<div class="my-popover-content">
@@ -112,7 +112,7 @@
 								<div><span>
 									<img class="img-responsive ratingImg" src="img/r3.png">
 									<div class="my-popover-content">Verification Lv.3</div>
-								</span><span class="productPrice">฿5,000.00</span></div>
+								</span><span class="ad-price">฿5,000.00</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION 
@@ -130,7 +130,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r2.png"><div class="my-popover-content">Verification Lv.2</div></span><span class="productPrice">฿980</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r2.png"><div class="my-popover-content">Verification Lv.2</div></span><span class="ad-price">฿980</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -148,7 +148,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="productPrice">฿46,800</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="ad-price">฿46,800</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -166,7 +166,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r3.png"><div class="my-popover-content">Verification Lv.3</div></span><span class="productPrice">฿4,500</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r3.png"><div class="my-popover-content">Verification Lv.3</div></span><span class="ad-price">฿4,500</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -184,7 +184,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r2.png"><div class="my-popover-content">Verification Lv.2</div></span><span class="productPrice">฿9,000</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r2.png"><div class="my-popover-content">Verification Lv.2</div></span><span class="ad-price">฿9,000</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -202,7 +202,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r3.png"><div class="my-popover-content">Verification Lv.3</div></span><span class="productPrice">฿1,150</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r3.png"><div class="my-popover-content">Verification Lv.3</div></span><span class="ad-price">฿1,150</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -220,7 +220,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="productPrice">฿5,730</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="ad-price">฿5,730</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -238,7 +238,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r2.png"><div class="my-popover-content">Verification Lv.2</div></span><span class="productPrice">฿5,550</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r2.png"><div class="my-popover-content">Verification Lv.2</div></span><span class="ad-price">฿5,550</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -256,7 +256,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="productPrice">฿420</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="ad-price">฿420</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
@@ -274,7 +274,7 @@
 							<div class="panel-body">
 								<div class="productName">ITEM</div>
 								<div class="productLocation">Location</div>
-								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="productPrice">฿1,240</span></div>
+								<div><span><img class="img-responsive ratingImg" src="img/r1.png"><div class="my-popover-content">Verification Lv.1</div></span><span class="ad-price">฿1,240</span></div>
 							</div>
 							<div class="my-popover-content">
 								DESCRIPTION
