-product add param load data (still need to populate other img than main one) -fix list css

--- a/product_list/list.htm
+++ b/product_list/list.htm
@@ -381,7 +381,7 @@ $(document).ready(function(){
 				iPrice = itemObject.Price;
 
 				$("#productListRow").append(`
-					<a href="javascript:void(0)">
+					<a href="./Product.html?id=`+iId+`">
 						<div class="col-sm-3">
 							<div class="panel panel-default productPanel">
 								<div class="panel-heading text-center">
