--- a/product_list/Product.html
+++ b/product_list/Product.html
@@ -71,26 +71,14 @@
             <div class="col-md-8">
                 <img id="mainImg" class="img-responsive" src="http://placehold.it/750x500" alt="">
             </div>
-			<div class="col-lg-4">
+			<div id="imgPit" class="col-lg-4">
                 <h3 class=""></h3>
 
-                <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
-                </a>
-            </div>
+								<div class="col-sm-3 col-xs-6">
+									<a href="#">
+										<img class="img-responsive portfolio-item" src="http://placehold.it/500x300" alt="">
+									</a>
+								</div>
 
 
             </div>
@@ -183,6 +171,18 @@ $(document).ready(function(){
 			$("#price").text(""+iPrice);
 			$("#display").text(""+iDisplay);
 			$("#description").text(""+iDescription);
+
+			for (count in iImgArray){
+				if(count != 0) {
+					iImg = iImgArray[count];
+					$("#imgPit").append(`<div class="col-sm-3 col-xs-6">
+							<a href="#">
+									<img class="img-responsive portfolio-item" src="`+iImg+`" alt="">
+							</a>
+					</div>`)
+				}
+
+			}
 	});
 
 });
