Updated button style

--- a/product_list/uploadSale6.html
+++ b/product_list/uploadSale6.html
@@ -59,10 +59,12 @@
         <div style="text-align: center;">
             <h1>ทางระบบได้รับข้อมูลแล้ว กรุณารอยืนยันผล</h1>
         </div>
-        <button id="goToHomePage" style="float:left;">ย้อนกลับหน้าหลัก</button>
+        <div style="text-align: center;">
+            <button id="goToHomePage" style="float:center;" type="button" class="btn btn-success">ย้อนกลับหน้าหลัก</button>
+        </div>    
         <script>
         
-            $('#goToPreviousPage').click(function(){
+            $('#goToHomePage').click(function(){
                 window.location.href = "file:///Users/PantiraSuttipongkanasai/Documents/capstone_group1/product_list/uploadSale1.html";
                 
             });
