--- a/product_list/uploadSale4.html
+++ b/product_list/uploadSale4.html
@@ -70,8 +70,12 @@
                 <option value="hurr">เมือง</option>
             </select><br>
         </div>
-        <button id="goToPreviousPage" style="float:left;">ย้อนกลับ</button>
-        <button id="goToNextPage" style="float:left;">ไปต่อ</button>
+        <div style="margin-left: 100px;">
+            <button id="goToPreviousPage" style="float:left;" type="button" class="btn btn-warning">ย้อนกลับ</button>
+        </div>
+        <div style="margin-right: 100px;">
+            <button id="goToNextPage" style="float:right;" type="button" class="btn btn-success">ไปต่อ</button>
+        </div>
         <script>
             $('#goToNextPage').click(function(){
                 window.location.href = "file:///Users/PantiraSuttipongkanasai/Documents/capstone_group1/product_list/uploadSale5.html";
