-adjust some UI

--- a/product_list/uploadSale6.html
+++ b/product_list/uploadSale6.html
@@ -16,6 +16,12 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="./js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="./css/style.css">
+        <style>
+             #space{
+                height: 40px;
+            }
+        
+        </style>
     </head>
     <body>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -56,9 +62,11 @@
                 </div>
             </div>
         </div>
+        <div id="space"></div>
         <div style="text-align: center;">
             <h1>ทางระบบได้รับข้อมูลแล้ว กรุณารอยืนยันผล</h1>
         </div>
+        <div id="space"></div>
         <div style="text-align: center;">
             <button id="goToHomePage" style="float:center;" type="button" class="btn btn-success">ย้อนกลับหน้าหลัก</button>
         </div>    
