-Be able to post value from faq to database

--- a/product_list/help.html
+++ b/product_list/help.html
@@ -156,7 +156,7 @@
             
 
              $('#faq01').click(function(){
-                 window.localStorage.setItem("Catrgory1",JSON.stringify(Category1));
+                 window.localStorage.setItem("Category1",JSON.stringify(Category1));
                  window.localStorage.setItem("click",JSON.stringify(1));
                  window.localStorage.setItem("topic",JSON.stringify("สินค้าประเภทใดบ้างที่สามารถลงขายได้"));
                  window.location.href = "file:///Users/PantiraSuttipongkanasai/Documents/capstone_group1/product_list/faq.html";
