good enough verify

--- a/product_list/verify.html
+++ b/product_list/verify.html
@@ -53,7 +53,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 verify-stat-text">
-				ระดับการยืนยันตัวของคุณ
+				ระดับการยืนยันตัวตนปัจจุบันของคุณ
 			</div>
 			<div class="col-md-6" style="text-align:center;">
 					<img style='height: 100%; width: 100%; object-fit: contain' src="img/verifyStat.png">
@@ -61,24 +61,44 @@
 			</div>
 		</div>
 	</div>
-		<div style="text-align:center;">
-			<h1>Recommendation</h1>
-    </div>
 
-
-			<div class="container">
-			<div class="row">
-					<div class="col-md-4" style="border-radius: 25px; background: #eeeeee; padding: 20px; width: 200px; height: 150px;">
-						asdf
+			<div class="container" style="margin-top: 100px;">
+			<div class="row verify-row" style="text-align:center">
+				<div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 280px; height: 350px; ">
+					<div class="top-row" style="margin-top:25px; margin-left:-15px; background-color:red; height:40px;">
+							ระดับ 1
 					</div>
-					<p style="border-top-right-radius:15px;
-border-top-left-radius:15px;
-border-bottom-right-radius:15px;
-border-bottom-left-radius:15px;
-    background: #73AD21;
-    padding: 20px;
-    width: 200px;
-    height: 150px;">Rounded corners!</p>
+					<div class="middle-row" style="margin-top:25px; background-color:white; height:170px;">
+
+					</div>
+					<div class="bottom-row" style="margin-top:25px; text-align:center;">
+							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">แก้ไขข้อมูล</div>
+					</div>
+				</div>
+
+				<div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 280px; height: 350px;">
+					<div class="top-row" style="margin-top:25px; margin-left:-15px; background-color:red; height:40px;">
+							ระดับ 2
+					</div>
+					<div class="middle-row" style="margin-top:25px; background-color:white; height:170px;">
+
+					</div>
+					<div class="bottom-row" style="margin-top:25px; text-align:center;">
+							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">แก้ไขข้อมูล</div>
+					</div>
+				</div>
+
+				<div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 280px; height: 350px;">
+					<div class="top-row" style="margin-top:25px; margin-left:-15px; background-color:red; height:40px;">
+							ระดับ 3
+					</div>
+					<div class="middle-row" style="margin-top:25px; background-color:white; height:170px;">
+
+					</div>
+					<div class="bottom-row" style="margin-top:25px; text-align:center;">
+							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">แก้ไขข้อมูล</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
