--- a/product_list/index.html
+++ b/product_list/index.html
@@ -44,7 +44,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#" id="addClass">พูดคุย</a></li>
-					<li><a href="./verify.html">แก้ไขข้อมูลผู้ขาย</a></li>
+					<li><a href="./verifyMain.html">แก้ไขข้อมูลผู้ขาย</a></li>
 					<li><button id="btnsell" type="button" class="btn btn-warning">ขาย</button></li>
 				</ul>
 			</div>
