--- a/product_list/verifyMain.html
+++ b/product_list/verifyMain.html
@@ -72,7 +72,9 @@
 
 					</div>
 					<div class="bottom-row" style="margin-top:25px; text-align:center;">
-							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">แก้ไขข้อมูล</div>
+							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">
+								แก้ไขข้อมูล
+							</div>
 					</div>
 				</div>
 
@@ -84,7 +86,9 @@
 
 					</div>
 					<div class="bottom-row" style="margin-top:25px; text-align:center;">
-							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">แก้ไขข้อมูล</div>
+							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">
+								แก้ไขข้อมูล
+							</div>
 					</div>
 				</div>
 
@@ -96,7 +100,9 @@
 
 					</div>
 					<div class="bottom-row" style="margin-top:25px; text-align:center;">
-							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">แก้ไขข้อมูล</div>
+							<div class="bottom-button" style="display:inline-block; border-radius: 10px; padding-left: 15px; padding-right:15px; background-color:orange; color:white; font-size:25px; height:50px; line-height:50px; ">
+								แก้ไขข้อมูล
+							</div>
 					</div>
 				</div>
 			</div>
