-Link yploadSale1.html to index.html page

--- a/product_list/Product.html
+++ b/product_list/Product.html
@@ -187,7 +187,11 @@ $(document).ready(function(){
 
 });
 
-
+        $('#btnsell').click(function(){
+                window.location.href = "./uploadSale1.html";
+                
+        });
+   
 
 
 </script>
