--- a/product_list/index.html
+++ b/product_list/index.html
@@ -159,7 +159,12 @@
     <br>ของ
     </div>
 -->
-
+    <script>
+        $('#btnsell').click(function(){
+                window.location.href = "./uploadSale1.html";
+                
+        });
+    </script>
 
 
 </body>
