--- a/product_list/list.htm
+++ b/product_list/list.htm
@@ -473,6 +473,10 @@ $(document).ready(function(){
 		</a>`);
 
 });
+        $('#btnsell').click(function(){
+                window.location.href = "./uploadSale1.html";
+                
+        });
 
 
 
