--- a/product_list/uploadSale1.html
+++ b/product_list/uploadSale1.html
@@ -128,7 +128,7 @@
                 window.localStorage.setItem("price",JSON.stringify($('input[name="price"]').val()));
                 var cate = document.getElementById('categoryChoice').selectedIndex;
                 window.localStorage.setItem("cate",JSON.stringify(catearray[cate]));
-                window.location.href = "file:///Users/PantiraSuttipongkanasai/Documents/capstone_group1/product_list/uploadSale2.html";
+                window.location.href = "./uploadSale2.html";
             });
         
             function getSelected(sel){
