--- a/product_list/uploadSale6.html
+++ b/product_list/uploadSale6.html
@@ -73,7 +73,7 @@
         <script>
         
             $('#goToHomePage').click(function(){
-                window.location.href = "file:///Users/PantiraSuttipongkanasai/Documents/capstone_group1/product_list/uploadSale1.html";
+                window.location.href = "./index.html";
                 
             });
         </script>
