--- a/product_list/verifyResult.html
+++ b/product_list/verifyResult.html
@@ -62,7 +62,12 @@
 		</div>
 	</div>
 
-
+ <script>
+        $('#btnsell').click(function(){
+                window.location.href = "./uploadSale1.html";
+                
+        });
+    </script>
 
 
 
