--- a/product_list/verifyLevel3.html
+++ b/product_list/verifyLevel3.html
@@ -82,7 +82,12 @@
     </div>
   </div>
 
-
+ <script>
+        $('#btnsell').click(function(){
+                window.location.href = "./uploadSale1.html";
+                
+        });
+    </script>
 
 
 
