--- a/product_list/verifyMain.html
+++ b/product_list/verifyMain.html
@@ -108,7 +108,12 @@
 			</div>
 		</div>
 
-
+ <script>
+        $('#btnsell').click(function(){
+                window.location.href = "./uploadSale1.html";
+                
+        });
+    </script>
 
 
 </body>
