-Set image maximum size in uploadSale5.html

--- a/product_list/uploadSale5.html
+++ b/product_list/uploadSale5.html
@@ -35,6 +35,12 @@
             td{
                 height: 50px;
             }
+            
+            #myImg{
+                max-height: 300px;
+                max-width: 500px
+            }
+            
         </style>
     </head>
     <body>
