--- a/product_list/verifyMain.html
+++ b/product_list/verifyMain.html
@@ -44,7 +44,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#" id="addClass">พูดคุย</a></li>
-					<li><a href="./verify.html">แก้ไขข้อมูลผู้ขาย</a></li>
+					<li><a href="./verifyMain.html">แก้ไขข้อมูลผู้ขาย</a></li>
 					<li><button id="btnsell" type="button" class="btn btn-warning">ขาย</button></li>
 				</ul>
 			</div>
@@ -65,8 +65,9 @@
 			<div class="container" style="margin-top: 100px;">
 			<div class="row verify-row" style="text-align:center">
 				<div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 280px; height: 350px; ">
-					<div class="top-row" style="margin-top:25px; margin-left:-15px; background-color:red; height:40px;">
-							ระดับ 1
+					<div class="top-row" style="margin-top:25px; margin-left:-15px; height:40px;">
+						<img src="img/r1.png" style="float:left;">
+							<span class="verify-level-text">ระดับ 1</span>
 					</div>
 					<div class="middle-row" style="margin-top:25px; background-color:white; height:170px;">
 
@@ -79,8 +80,9 @@
 				</div>
 
 				<div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 280px; height: 350px;">
-					<div class="top-row" style="margin-top:25px; margin-left:-15px; background-color:red; height:40px;">
-							ระดับ 2
+					<div class="top-row" style="margin-top:25px; margin-left:-15px; height:40px;">
+						<img src="img/r2.png" style="float:left;">
+							<span class="verify-level-text">ระดับ 2</span>
 					</div>
 					<div class="middle-row" style="margin-top:25px; background-color:white; height:170px;">
 
@@ -93,8 +95,9 @@
 				</div>
 
 				<div class="col-md-4" style="border-radius: 10px; background: #eeeeee; width: 280px; height: 350px;">
-					<div class="top-row" style="margin-top:25px; margin-left:-15px; background-color:red; height:40px;">
-							ระดับ 3
+					<div class="top-row" style="margin-top:25px; margin-left:-15px; height:40px;">
+						<img src="img/r3.png" style="float:left;">
+							<span class="verify-level-text">ระดับ 3</span>
 					</div>
 					<div class="middle-row" style="margin-top:25px; background-color:white; height:170px;">
 
