-Add Footer to all uploadSale.html & VerifyAdmin.html & VerifyLevel.html -Change image in help.html

--- a/product_list/help.html
+++ b/product_list/help.html
@@ -55,14 +55,14 @@
                     <a ><h4 id="faq09"><span >วิธีการรับมือคนโกง</span></h4></a>
                 </div>
                 <div class="col-md-3">
-                    <img src="img/kaideeg.png" style="width:200px;height:200px;">
+                    <img src="img/veri.png" style="width:200px;height:200px;">
                     <h2 id="sid-380" class="accordion-1 reset">ระบบยืนยันตัวตน</h2>
                     <a ><h4 id="faq10"><span >อะไรคือระบบการยืนยันตัวตน</span></h4></a>
                     <a ><h4 id="faq11"><span >วิธีการใช้งานระบบยืนยันตัวตนของผู้ขาย</span></h4></a>
                     <a ><h4 id="faq12"><span >ข้อสงสัยหรือปัญหาเกี่ยวกับระบบยืนยันตัวตน</span></h4></a>
                 </div>
                 <div class="col-md-3">
-                    <img src="img/car.png" style="width:200px;height:200px;">
+                    <img src="img/kaideeg.png" style="width:200px;height:200px;">
                     <h2 id="sid-380" class="accordion-1 reset">คำถามที่พบบ่อย</h2>
                     <a ><h4 id="faq13"><span >เกี่ยวกับผู้ซื้อ</span></h4></a>
                     <a ><h4 id="faq14"><span >เกี่ยวกับผู้ขาย</span></h4></a>
