-Handle error when connect to DB in faq.html and help.html

--- a/product_list/faq.html
+++ b/product_list/faq.html
@@ -167,7 +167,10 @@
                               $('#yes').remove();
                               $('#no').remove();
                               $('#vote').append('<label>คุณได้ทำการโหวดเรียบร้อยแล้ว</label>');
-                          }
+                          },
+                         error : function(data){
+                             alert("Please try again and check you internet connection");
+                         }
                     });
                     
                 }
