--- a/product_list/help.html
+++ b/product_list/help.html
@@ -173,7 +173,9 @@
                    }
 
                   // console.log(Category1);
-               });
+               }).fail( function(data) {
+                   alert("Please try again and check you internet connection");
+                });
             }
             
 
