resize progress in product

--- a/UI_With_Flask/list.htm
+++ b/UI_With_Flask/list.htm
@@ -45,7 +45,7 @@
 	</nav>
 
 	<div class="container" style="text-align: center; margin: 0 auto;float: none;">
-		<img class="img-responsive tutorial" href="#" src="img/tutorial2.png" width="70%" height="70%" style="text-align: center; margin: 0 auto;float: none;">
+		<img class="img-responsive tutorial" href="#" src="img/Step2.png" width="35%" style="text-align: center; margin: 0 auto;float: none;">
 
 		</br>
 	</div>
@@ -475,7 +475,7 @@ $(document).ready(function(){
 });
         $('#btnsell').click(function(){
                 window.location.href = "./uploadSale1.html";
-                
+
         });
 
 
