--- a/UI_Without_Flask/index.html
+++ b/UI_Without_Flask/index.html
@@ -43,6 +43,7 @@
 
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
+                    <li><a href="#" id="สนเรื">Login</a></li>
 					<li><a href="#" id="addClass">พูดคุย</a></li>
 					<li><a href="./verifyMain.html">แก้ไขข้อมูลผู้ขาย</a></li>
 					<li><button id="btnsell" type="button" class="btn btn-warning">ขาย</button></li>
